# Auto-DJ

./: .gitignore  ArrayList.cpp  ArrayList.h  ArrayList.inl  AutoDJ.cpp  AutoDJ.cpp.orig  AutoDJ.h  CMakeLists.txt  FileManager.cpp  FileManager.h  FileManagerTest.cbp  FileManagerTest.cpp  Library.cpp  Library.h  LibraryTest.cpp  LinkedNode.h  LinkedNode.inl  LinkedQueue.h  LinkedQueue.inl  List.h  Playlist.cpp  Playlist.h  PlaylistList.h  PlaylistTest.cpp  Playlists.cpp  Playlists.h  PlaylistsTest.cpp  Queue.h  README.md  Song.cpp  Song.h  SongTest  SongTest.cpp  TestLib.h  TestLib.inl  UserInterface.cpp  UserInterface.exe.stackdump  UserInterface.h  librarycopy.txt  remove_songs.txt
original_song_data/: new_songs.txt  playlists.txt
